# genesis-browser

./: Cargo.toml  build-genesis.sh  genesis-browser  install-deps-ubuntu.sh  run_modern_ui.sh  rust-toolchain.toml  servo
.claude/: settings.local.json
components/genesis-browser/: Cargo.toml  main.rs
components/genesis-browser/genesis-dns/: Cargo.toml
components/genesis-browser/genesis-dns/src/: lib.rs
components/genesis-browser/genesis-integration/: Cargo.toml
components/genesis-browser/genesis-integration/src/: gui.rs  lib.rs  servo_engine.rs  servo_integration.rs  webview.rs
components/genesis-browser/genesis-ui/: Cargo.toml
components/genesis-browser/genesis-ui/src/: browser_ui.rs  browser_ui_legacy.rs  components.rs  components_egui.rs  enhanced_browser.rs  lib.rs  modern_browser.rs
components/net/: resource_thread.rs
components/script/dom/: cookiestore.rs  csp.rs  window.rs
components/shared/base/: id.rs
components/shared/net/: lib.rs
