[package]
name = "genesis-dns"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Genesis Blockchain DNS Resolver for Browser"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json"] }

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Time and date
chrono = "0.4"

# DNS (optional for traditional fallback)
trust-dns-resolver = { version = "0.23", optional = true }

[features]
default = ["blockchain-dns", "traditional-fallback"]
blockchain-dns = []
traditional-fallback = ["trust-dns-resolver"]