[package]
name = "genesis-integration"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration layer for Genesis Browser - Servo engine and blockchain integration"

[dependencies]
# Genesis DNS integration
genesis-dns = { path = "../genesis-dns" }

# Servo engine dependencies (full integration - same workspace)
libservo = { path = "../../servo" }
compositing = { path = "../../compositing" }
compositing_traits = { path = "../../shared/compositing" }
constellation = { path = "../../constellation" }
constellation_traits = { path = "../../shared/constellation" }
script = { path = "../../script" }
script_traits = { path = "../../shared/script" }
layout = { path = "../../layout" }
layout_api = { path = "../../shared/layout" }
net = { path = "../../net" }
net_traits = { path = "../../shared/net" }
base = { path = "../../shared/base" }
servo_url = { path = "../../url" }

# Window management (required for full Servo integration)
winit = "0.29"
glutin = "0.31"  
surfman = "0.9"
euclid = "0.22"
gleam = "0.15"
raw-window-handle = "0.6"

# Core dependencies
url = "2.5"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Async runtime and sync primitives
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["servo-integration"]
servo-integration = []  # All Servo deps included by default now
servo-ready = []